<resources>
    <string name="app_name">超级曲库</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="netease_cloud_music">网易云音乐</string>
    <string name="qq_music">QQ音乐</string>
    <string name="start_online_search">开始全网搜索</string>
    <string name="search_hint">歌曲名/歌手</string>
    <string name="download_music">下载这首歌</string>
    <string name="view_album">查看所在专辑</string>
    <string name="download_all_album_songs">下载所在专辑所有歌曲</string>
    <string name="task_added">下载任务已添加!</string>
    <string name="todo">暂未支持</string>
</resources>
