<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SongInfoActivity">

    <TextView
        android:id="@+id/song_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Yellow Submarine" />

    <TextView
        android:id="@+id/artist_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="The Beatles" />

    <TextView
        android:id="@+id/album_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Yellow Album..." />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.33dp"
        android:background="#FF0000" />

    <Button
        android:id="@+id/download_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_music" />

    <Button
        android:id="@+id/view_album_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_album" />

    <Button
        android:id="@+id/download_album_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_all_album_songs" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/music_menu_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:layoutManager="LinearLayoutManager" />

</LinearLayout>